fixed invalid text-align and uncentered blocks

--- a/src/styles/editor-block.scss
+++ b/src/styles/editor-block.scss
@@ -21,6 +21,8 @@
 // Block widths,
 .is-root-container > [data-block]:not([data-align="wide"]):not([data-align="full"]):not([data-align="right"]):not([data-align="left"]) {
 	max-width: var(--stk-block-max-width, var(--block-max-width, var(--responsive--aligndefault-width, none)));
+	margin-left: auto;
+	margin-right: auto;
 }
 // Make sure by default, our inner blocks are center aligned.
 .stk-row {
